# avtts

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
app-avtts/: CMakeLists.txt
app-avtts/include/: Application.h  MainWindow.h
app-avtts/src/: Application.cpp  MainWindow.cpp  main.cpp
app-avtts/ui/: mainwindow.ui
toolkit-model/: CMakeLists.txt
toolkit-model/include/: FaceModel.h  HandModel.h  HumanModel.h  Mesh.h
toolkit-model/src/: FaceModel.cpp  HandModel.cpp  HumanModel.cpp  Mesh.cpp
toolkit-tts/: CMakeLists.txt
toolkit-tts/src/: MaryTTSClient.java
